                     CHANGES version 5.31.0

           This file summarizes changes made since 5.0

Version 5.31.0

Fixed: Issue #1025: If Monit 5.30.0 CLI action was executed for non-existent service name, the error
message was not reported properly. Thanks to Lutz Mader for fix.


Version 5.30.0

New: Add a 'read-only' option to the httpd statement. The option can be used on the TCP socket, the unix
socket or both. Example for setting the whole TCP socket read-only and the unix socket read-write (so the
Monit CLI actions like service start/stop will work):
    set httpd
        port 2812
            read-only
            allow localhost
        unixsocket /run/monit.socket
Thanks to Christian Goettsche for contributing this feature.

Fixed: Issue #1009: Redirect back to the same url so a reload in the browser does not perform a POST again

Fixed: The disk read/write bytes didn't show up in M/Monit for Monit 5.27.0 or later.

Fixed: Issue #998: Old platforms without clock_gettime() and monotonic clock fail to compile Monit 5.29.0.
Thanks to Lutz Mader.

Fixed: Issue #1002: 32-bit Linux with more then 4GB of RAM reported wrong system memory and swap value.

Fixed: Issue #1005: When the port statement is used with the generic protocol and the server returned zeros
in the response, Monit may crash. The problem was introduced in Monit 5.20.0.

Fixed: Issue #1011: Increase the include files count limit from 512 to 1024.

Fixed: Issue #1015: The 'set httpd' statement supports only one 'address' option. Shows warning if multiple
'address' options are used.


Version 5.29.0

New: Issue #715: The PostgreSQL protocol test was extended with username, password and database options. Example:
    if failed port 5432 protocol pgsql username "myusername" password "123456" database "test" then alert
The previous Monit version used hardcoded user=root and database=root, which may trigger thousands of messages like
this in the postgresql log a day: