@@ -4,6 +4,8 @@
 
 Version 5.31.0
 
+New: Issue #555: Add support for FreeBSD ZFS statistics (requires FreeBSD 12.x or later).
+
 Fixed: Issue #1025: If Monit 5.30.0 CLI action was executed for non-existent service name, the error
 message was not reported properly. Thanks to Lutz Mader for fix.
 
